--- a/TFC/src/main/resources/templates/fragments/adminNav.html
+++ b/TFC/src/main/resources/templates/fragments/adminNav.html
@@ -1,4 +1,6 @@
-
+	<li class="boton-lista">
+    	<a th:href="@{/admin/coches}">COCHES</a>
+	</li>
     <li class="boton-lista">
     	<a th:href="@{/admin/usuarios}">USUARIOS</a>
     </li>
@@ -6,5 +8,7 @@
     	<a th:href="@{/admin/productos}">PRODUCTOS</a>
     </li>
     <li class="boton-lista">
-    	<a th:href="@{/admin/coches}">COCHES</a>
+    	<a th:href="@{/admin/empleados}">EMPLEADOS</a>
 	</li>
+    
+	
